--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+:root {
+  --image: null;
+}
+
 .App {
   text-align: center;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.tile {
+  background-color: whitesmoke;
   color: white;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('https://images.unsplash.com/photo-1589377778631-73ae767b3413?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80');
+  background-size: 500px 500px;
+  background-repeat: no-repeat;
 }
 
-.App-link {
-  color: #61dafb;
+.tilesss {
+  
+  background-color: whitesmoke;
+  color: black;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgz {
+  background-image: url('https://images.unsplash.com/photo-1589377778631-73ae767b3413?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80');
+  background-size: 500px 500px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.display {
+  height: 500px;
+  width: 500px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#zero {
+  background-image: none;
+  background-color: white;
+  color: white;
 }
